--- a/src/index.html
+++ b/src/index.html
@@ -77,10 +77,13 @@
           />
         </div>
         <div class="login-row">
-          <button class="field-button field-button--facebook">Sign in</button>
+          <button
+            class="field-button field-button--facebook">Sign in</button>
         </div>
       </form>
     </div>
+
+    <br />
     <script src="scripts/main.js"></script>
   </body>
 </html>
